# control-limit-search

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
control_limit_search/: __init__.py  decision_boundary.py  greedy_search.py  recursive_search.py  statistical_distance.py  utils.py
control_limits/: __init__.py  utils.py  vis.py
control_limits/datasets/chinatown/: data_loader.py
control_limits/datasets/gunpoint_oldversusyoung/: GunPointOldVersusYoung_TEST.arff  GunPointOldVersusYoung_TRAIN.arff  data_loader.py
control_limits/datasets/synthetic_data/: data_loader.py  synthetic_data_generator.py
control_limits/src/: __init__.py  decision_boundary.py  decision_tree.py  derive_limits.py  greedy_search.py  greedy_search_limits.py  iterate_limits_search.py  locate_max_separability.py  max_class_separability.py  recursive_search.py  recursive_search_limits.py  split_points_search.py  stat_analysis_limits.py  statistical_distance.py  utils.py  vis.py
datasets/chinatown/: chinatown.json  load.py
datasets/freezer_small_train/: load.py
datasets/gunpoint_oldversusyoung/: gunpoint_oldversusyoung.json  load.py
datasets/sony_ai_robot/: load.py  sony_ai_robot.json
example/: example.py
examples/: data_example.py  example.py
examples/.ipynb_checkpoints/: greedy_search-checkpoint.ipynb
plotting/: __init__.py  plot.py
